k8s/nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
  namespace: portfolio
  labels:
    app: nextjs
spec:
  replicas: 1  # Ensure high availability
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: krmu/portfolio
          ports:
            - containerPort: 3003  # Next.js default port
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
