k8s/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: portfolio
spec:
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
